--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <!--Footer-->
     <footer class="footer items-center p-4 text-white-content gradient">
         <div class="items-center grid-flow-col">
-            <p>Copyright © 2022 - All right reserved</p>
+            <p>Copyright © 2022 - Fadhil Zaki</p>
         </div>
         <div class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
             <a href="https://www.youtube.com/channel/UC5wxyvyCQreK6eDZKuFpZCA" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
